unpackaged/main/default/objects/ccpe_r__Utilization__c/ccpe_r__Utilization__c.object-meta.xml
<CustomObject>
    <label>Utilization</label>
    <nameField>
        <displayFormat>U-{0}</displayFormat>
        <label>Utilization Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Utilizations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>