unpackaged/main/default/objects/ccpe_r__Utilization__c/fields/ccpe_r__Billable_Hours__c.field-meta.xml
<CustomField>
    <fullName>ccpe_r__Billable_Hours__c</fullName>
    <label>Billable Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>