unpackaged/main/default/objects/ccpe_r__Utilization__c/fields/ccpe_r__End__c.field-meta.xml
<CustomField>
    <fullName>ccpe_r__End__c</fullName>
    <formula>IF($RecordType.DeveloperName == &#39;Weekly&#39;,
	ccpe_r__Start__c + 6,
/*ELSE*/IF($RecordType.DeveloperName == &#39;Monthly&#39;,
	DATE(
		YEAR(ccpe_r__Start__c),
		MONTH(ccpe_r__Start__c),
		CASE(MONTH(ccpe_r__Start__c),
			1, 31,
			2, IF(MOD(YEAR(ccpe_r__Start__c), 4) = 0, 29, 28),
			3, 31,
			4, 30,
			5, 31,
			6, 30,
			7, 31,
			8, 31,
			9, 30,
			10, 31,
			11, 30,
			12, 31,
			0
		)
	),
	NULL
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End</label>
    <type>Date</type>
</CustomField>