unpackaged/main/default/objects/ccpe_r__Utilization__c/fields/ccpe_r__Hash__c.field-meta.xml
<CustomField>
    <fullName>ccpe_r__Hash__c</fullName>
    <formula>CASESAFEID(OwnerId) &amp; CASESAFEID(RecordTypeId) &amp; TEXT(ccpe_r__Start__c)</formula>
    <label>Hash</label>
    <type>Text</type>
</CustomField>