unpackaged/main/default/objects/ccpe_r__Utilization__c/fields/ccpe_r__Non_Billable_Hours__c.field-meta.xml
<CustomField>
    <fullName>ccpe_r__Non_Billable_Hours__c</fullName>
    <formula>ccpe_r__Worked_Hours__c - ccpe_r__Exempt_Hours__c - ccpe_r__Billable_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Non Billable Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>