unpackaged/main/default/objects/ccpe_r__Utilization__c/fields/ccpe_r__Start__c.field-meta.xml
<CustomField>
    <fullName>ccpe_r__Start__c</fullName>
    <label>Start</label>
    <required>true</required>
    <type>Date</type>
</CustomField>