unpackaged/main/default/objects/ccpe_r__Utilization__c/fields/ccpe_r__Utilization_rate__c.field-meta.xml
<CustomField>
    <fullName>ccpe_r__Utilization_rate__c</fullName>
    <formula>(ccpe_r__Billable_Hours__c +  ccpe_r__Exempt_Hours__c ) /  ccpe_r__Working_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Denotes the utilization rate of a user for a particular week or month (NOTE this field should not be used for reporting across multiple utilization periods)</inlineHelpText>
    <label>Utilization Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>