unpackaged/main/default/objects/ccpe_r__Utilization__c/fields/ccpe_r__Working_Days__c.field-meta.xml
<CustomField>
    <fullName>ccpe_r__Working_Days__c</fullName>
    <description>How many working days are there between the start and end dates</description>
    <label>Working Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>