unpackaged/main/default/objects/ccpe_r__Utilization__c/fields/ccpe_r__Working_Hours__c.field-meta.xml
<CustomField>
    <fullName>ccpe_r__Working_Hours__c</fullName>
    <label>Target Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>