unpackaged/main/default/objects/ccpe_r__Utilization__c/recordTypes/ccpe_r__Monthly.recordType-meta.xml
<RecordType>
    <fullName>ccpe_r__Monthly</fullName>
    <active>true</active>
    <description>Utilization calculations for a month of utilization</description>
    <label>Monthly</label>
</RecordType>