unpackaged/main/default/objects/ccpe_r__Utilization__c/recordTypes/ccpe_r__Weekly.recordType-meta.xml
<RecordType>
    <fullName>ccpe_r__Weekly</fullName>
    <active>true</active>
    <description>Utilization calculations for a week of utilization</description>
    <label>Weekly</label>
</RecordType>