unpackaged/main/default/objects/ccpe_r__Utilization__c/listViews/ccpe_r__All.listView-meta.xml
<ListView>
    <fullName>ccpe_r__All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>ccpe_r__Start__c</columns>
    <columns>ccpe_r__End__c</columns>
    <columns>ccpe_r__Worked_Hours__c</columns>
    <columns>ccpe_r__Billable_Hours__c</columns>
    <columns>ccpe_r__Exempt_Hours__c</columns>
    <columns>ccpe_r__Non_Billable_Hours__c</columns>
    <columns>ccpe_r__Working_Hours__c</columns>
    <columns>ccpe_r__Utilization_rate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>